# archive-optf-fgps

./: .gitignore  .gitreview  INFO.yaml  LICENSE.txt  README.rst  Valet-Test.robot  groups  pom.xml  project.config  reviewers.config  sonar.sh  version.properties
engine/: LICENSE.txt  README.rst  assembly.xml  build-dockers.sh  pom.xml  requirements.txt  setup.cfg  setup.py  tox.ini
engine/docker/: Dockerfile
engine/kubernetes/org-onap-fgps-dev/: Chart.yaml  values.yaml
engine/kubernetes/org-onap-fgps-dev/resources/config/: solver.json
engine/kubernetes/org-onap-fgps-dev/templates/: configmap.yaml  deployment.yaml  service.yaml
engine/src/: requirements.txt
engine/src/config/: planner.json  solver.json  solver_test.json  version.json
engine/src/docker/: Dockerfile
engine/src/tools/: README.md  crim.py  lock.py  ppdb.py
engine/src/tools/lib/: common.py  hosts.json  song.py  tables.py
engine/src/valet/: __init__.py  bootstrapper.py  valet_main.py
engine/src/valet/engine/app_manager/: app.py  app_handler.py  app_parser.py  group.py  server.py
engine/src/valet/engine/db_connect/: db_handler.py  locks.py
engine/src/valet/engine/resource_manager/: compute_manager.py  metadata_manager.py  naming.py  nova_compute.py  resource.py  resource_handler.py  topology_manager.py
engine/src/valet/engine/search/: avail_resources.py  constraint_solver.py  optimizer.py  resource.py  (+2 more)
engine/src/valet/rules/: VNF_Rack_Diversity_RDN.json  VNF_Rack_Quorum_RDN.json  VNF_host_diversity_RDN.json  test_host_affinity_rule.json  test_host_diveristy_rule0.json  test_host_diveristy_rule1.json  test_host_diveristy_rule2.json  test_host_exclusivity.json  test_host_exclusivity2.json
engine/src/valet/solver/: ostro.py
engine/src/valet/utils/: decryption.py  logger.py
(+111 files in other folders)
