# -*- encoding: utf-8 -*-
# -------------------------------------------------------------------------
#   Copyright (c) 2019 AT&T Intellectual Property
#   Modifications Copyright (C) 2019 IBM
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
#
# -------------------------------------------------------------------------
#
	
[metadata]
name = of-fgps
summary = Fine-Grained Placement Service
description-file = README.rst
author = AT&T
author-email = amartell@research.att.com
home-page = https://wiki.onap.org/display/DW/Fine-Grained+Placement+Service
classifier =
    Development Status :: 4 - Beta
    Environment :: ONAP
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved  :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
keywords =
    onap
    fgps
    engine
	
[global]
setup-hooks =
    pbr.hooks.setup_hook
	
[pbr]
warnerrors = true
autodoc_index_modules = true